// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageReader Component should match snapshot and show the progress tracker 1`] = `
<Segment
  basic={true}
>
  <Message
    color="teal"
  >
    <MessageHeader>
      Processing Image
    </MessageHeader>
  </Message>
  <Segment
    basic={true}
  >
    <Progress
      color="teal"
      percent={9000}
      progress="percent"
    >
      <Header
        color="grey"
        size="small"
      >
        Processing Score
      </Header>
    </Progress>
    <Progress
      color="teal"
      percent={9000}
      progress="percent"
    >
      <Header
        color="grey"
        size="small"
      >
        Processing Stats
      </Header>
    </Progress>
  </Segment>
</Segment>
`;

exports[`ImageReader Component should match the snapshot if there are no images passed to the component 1`] = `
<Segment
  basic={true}
>
  <Message
    color="teal"
  >
    <MessageHeader>
      Processing Image
    </MessageHeader>
  </Message>
  <Message
    color="red"
    content="Welp, something went wrong. Tell Scott to fix his crap."
    header="Oops!"
  />
</Segment>
`;
